--- a/shop/style/blocks/_product-categories.scss
+++ b/shop/style/blocks/_product-categories.scss
@@ -3,19 +3,23 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    justify-content: space-between;
 
     &__box {
         @include display-flex-center();
+        background-position: center;
+        background-size: cover;
+
 
         &_size {
             &_little {
                 width: 360px;
-                height: 260px;
+                min-height: 260px;
             }
 
             &_large {
                 width: 100%;
-                height: 180px;
+                min-height: 180px;
             }
         }
 
@@ -49,6 +53,48 @@
             font-size: 24px;
             line-height: 29px;
             color: $main-color;
+        }
+    }
+}
+
+@media (max-width: 1160px) {
+    .product-categories {
+        gap: 19px;
+        margin-top: 20px;
+
+        &__box {
+            &_size {
+                &_little {
+                    width: 31.57%;
+                    height: 167px;
+                }
+
+                &_large {
+                    height: 116px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    .product-categories {
+        gap: 32px;
+        margin-top: 64px;
+        margin-left: 8px;
+        margin-right: 8px;
+
+        &__box {
+            &_size {
+                &_little {
+                    width: 100%;
+                    height: 247px;
+                }
+
+                &_large {
+                    height: 111px;
+                }
+            }
         }
     }
 }
