--- a/shop/style/style.css
+++ b/shop/style/style.css
@@ -51,10 +51,6 @@
   transition: background-color 0.3s, color 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
   transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s;
   transition: background-color 0.3s, color 0.3s, text-decoration 0.3s, fill 0.3s, -webkit-text-decoration 0.3s;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  transition: transform 0.3s, -webkit-transform 0.3s;
   text-decoration: none;
   fill: #FFFFFF;
   display: -webkit-box;
@@ -64,6 +60,13 @@
 
 .main-nav__link:hover {
   fill: #F16D7F;
+}
+
+.main-nav__link_type_logo {
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .main-nav__link_type_logo:hover {
