--- a/shop/style/style.css
+++ b/shop/style/style.css
@@ -1162,6 +1162,7 @@
   font-size: 14px;
   line-height: 17px;
   font-weight: 300;
+  display: block;
   width: 360px;
   background-color: #FFFFFF;
   border: none;
@@ -1189,6 +1190,7 @@
   font-size: 14px;
   line-height: 17px;
   font-weight: 300;
+  display: block;
   background-color: #FFFFFF;
   display: none;
   border: none;
@@ -1514,6 +1516,10 @@
 @media (max-width: 760px) {
   .filter {
     gap: 24px;
+  }
+  .filter__item-title {
+    font-size: 12px;
+    line-height: 14px;
   }
 }
 
